--- a/skin/index.html
+++ b/skin/index.html
@@ -3,18 +3,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-        <title>{{ page.title }}</title>
+        <title>{{ page.title }} - {{ site.title }}</title>
     </head>
     <body>
         <header class="site-header">
-            <h1>
+            <h2>
                 <nav class="site-nav">
                     <span>{{ site.title }}</span>
                     <a href="/">Home</a>
                 </nav>
-            </h1>
+            </h2>
+            <hr>
         </header>
         <main id="content" class="site-main">
+            <h1>{{ page.title}}</h1>
             {{ page.content }}
         </main>
     </body>
