--- a/skin/index.html
+++ b/skin/index.html
@@ -17,6 +17,12 @@
         </header>
         <main id="content" class="site-main">
             <h1>{{ page.title }}</h1>
+            <div class="catlinks">
+                <span>{{ site.namespaces[14] }} : </span>
+                {% for category in page.categories %}
+                <a href="{{ category.url }}">{{ category.name }}</a>
+                {% endfor %}
+            </div>
             {{ page.content }}
         </main>
     </body>
