--- a/skin/index.html
+++ b/skin/index.html
@@ -10,20 +10,22 @@
             <h2>
                 <nav class="site-nav">
                     <span>{{ site.title }}</span>
-                    <a href="/">Home</a>
+                    <a href="{{ site.baseUrl }}/">Home</a>
                 </nav>
             </h2>
             <hr>
         </header>
         <main id="content" class="site-main">
             <h1>{{ page.title }}</h1>
-            <div class="catlinks">
-                <span>{{ site.namespaces[14] }} : </span>
-                {% for category in page.categories %}
-                    <a href="{{ category.url }}">{{ category.name }}</a>
-                {% endfor %}
-            </div>
-            {% if page.members %}
+            {% if page.categories %}
+                <div class="catlinks">
+                    <span>{{ site.namespaces[14] }} : </span>
+                    {% for category in page.categories %}
+                        <a href="{{ category.url }}">{{ category.name }}</a>
+                    {% endfor %}
+                </div>
+            {% endif %}
+            {% if page.members and page.members.length > 0 %}
                 <ul class="catmembers">
                     {% for member in page.members %}
                         <li><a href="{{ member.url }}">{{ member.name }}</a></li>
