--- a/skin/index.html
+++ b/skin/index.html
@@ -10,7 +10,7 @@
             <h2>
                 <nav class="site-nav">
                     <span>{{ site.title }}</span>
-                    <a href="{{ site.baseUrl }}/">Home</a>
+                    <a href="{{ site.baseUrl }}{{ site.pagesPath }}{{ site.mainPage }}">Home</a>
                 </nav>
             </h2>
             <hr>
