--- a/skin/index.html
+++ b/skin/index.html
@@ -3,14 +3,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-        <title>{{ page.title }} - {{ site.title }}</title>
+        <title>{{ page.title }} - {{ site.meta.title }}</title>
     </head>
     <body>
         <header class="site-header">
             <h2>
                 <nav class="site-nav">
                     <span>{{ site.title }}</span>
-                    <a href="{{ site.baseUrl }}{{ site.pagesPath }}{{ site.mainPage }}">Home</a>
+                    <a href="{{ site.baseUrl }}{{ site.path.pages }}{{ site.meta.mainPage }}">Home</a>
                 </nav>
             </h2>
             <hr>
@@ -18,7 +18,7 @@
         <main id="content" class="site-main">
             <h1>{{ page.title }}</h1>
             <div class="catlinks">
-                <span>{{ site.namespaces[14] }} : </span>
+                <span>{{ site.namespace.names[14] }} : </span>
                 {% for category in page.categories %}
                     <a href="{{ category.url }}">{{ category.name }}</a>
                 {% endfor %}
