--- a/skin/index.html
+++ b/skin/index.html
@@ -19,7 +19,11 @@
         </header>
         <main class="site-main">
             <head class="main-header">
-                <h1>{{ page.title }}</h1>
+                <h1 class="page-title">{{ page.title }}</h1>
+                <nav class="main-nav">
+                    <a href="{{ site.source.url }}/index.php?title={{ page.title }}&action=edit">Edit</a>
+                    <a href="{{ site.source.url }}/index.php?title={{ page.title }}&action=history">History</a>
+                </nav>
             </head>
             <hr>
             <div class="catlinks">
