Apply flex to header items

--- a/skin/index.html
+++ b/skin/index.html
@@ -22,14 +22,14 @@
             </main>
         </header>
         <main class="site-main">
-            <head class="main-header">
+            <header class="main-header">
                 <h1 class="page-title">{{ page.title }}</h1>
                 <nav class="main-nav">
                     <a href="{{ site.source.url }}/index.php?title={{ page.title }}">原本</a>
                     <a href="{{ site.source.url }}/index.php?title={{ page.title }}&action=edit">編輯</a>
                     <a href="{{ site.source.url }}/index.php?title={{ page.title }}&action=history">歷史</a>
                 </nav>
-            </head>
+            </header>
             <hr>
             <div class="catlinks">
                 <span>{{ site.namespace.names[14] }} : </span>
