--- a/skin/index.html
+++ b/skin/index.html
@@ -5,7 +5,10 @@
 
         <title>{{ page.title }} - {{ site.meta.title }}</title>
 
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Sans+KR&family=Noto+Sans+SC&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.baseUrl }}/res/css/index.css">
+        <link rel="stylesheet" href="{{ site.baseUrl }}/res/css/ruby.css">
     </head>
     <body>
         <header class="site-header">
