--- a/skin/index.html
+++ b/skin/index.html
@@ -18,7 +18,7 @@
                         <a href="{{ site.baseUrl }}{{ site.path.pages }}{{ site.meta.mainPage }}">{{ site.meta.title }}</a>
                     </span>
                 </nav>
-                <form class="goto" onsubmit="location.href = '{{ site.baseUrl }}{{ site.path.pages }}/' + document.querySelector('#goto-input').value + '{{ site.extension.page }}'; return false;">
+                <form class="goto" onsubmit="location.href = '{{ site.baseUrl }}{{ site.path.pages }}/' + document.querySelector('#goto-input').value.trim().replace(/ /g, '_') + '{{ site.extension.page }}'; return false;">
                     <input type="text" id="goto-input">
                     <button type="submit">移動</button>
                 </form>
