Add image field on raw page

--- a/skin/index.html
+++ b/skin/index.html
@@ -41,6 +41,11 @@
                 {% endfor %}
             </div>
             <article id="content">
+                {% if page.file %}
+                    <div id="file">
+                        {{ page.file }}
+                    </div>
+                {% endif %}
                 {{ page.content }}
                 {% if page.members and page.members.length > 0 %}
                     <ul class="catmembers">
